test/scc/expr/semantic-errors/120.a
120.t:3:18: error: too many initializer values